Решил проблему с пунктуацией и пробелами. Словарь стал меньше. По-хорошему чем меньше словарь, тем лучше, но не знаю...

--- a/name.ipynb
+++ b/name.ipynb
@@ -5873,13 +5873,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "6ZGnZPyazd9H",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd8a235e-4b68-449b-b5c1-18894d243be3"
+        "outputId": "5e01ddd1-d6d9-490f-da95-1638e08aceba"
       },
       "outputs": [
         {
@@ -5906,7 +5906,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "xEhs0ZVV8zmu"
       },
@@ -5917,7 +5917,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 77,
       "metadata": {
         "id": "UpWpBT_39qCu"
       },
@@ -5926,7 +5926,9 @@
         "def clean_descriptions(descriptions: Dict[str, List]) -> Dict[str, List]:\n",
         "    cleaned_descriptions = {}\n",
         "    # prepare translation table for removing punctuation\n",
-        "    table = str.maketrans('', '', string.punctuation)\n",
+        "    # table = str.maketrans('', '', string.punctuation)\n",
+        "    # как вариант попробовать это\n",
+        "    table = str.maketrans(string.punctuation, ' ' * len(string.punctuation))\n",
         "    for key, desc_list in descriptions.items():\n",
         "        for i in range(len(desc_list)):\n",
         "            desc = desc_list[i]\n",
@@ -5937,9 +5939,11 @@
         "                # convert to lower case\n",
         "                desc = [word.lower() for word in desc]\n",
         "                # remove punctuation from each token (if remove following line, then vocabulary's size increases)\n",
-        "                # desc = [w.translate(table) for w in desc]\n",
+        "                desc = [w.translate(table) for w in desc]\n",
+        "                # remove extra spaces\n",
+        "                desc = [word.strip() for word in desc]\n",
         "                # remove hanging 's' and 'a' (according to the article: len(word) > 1)\n",
-        "                desc = [word for word in desc if len(word) >= 2]\n",
+        "                desc = [word for word in desc if len(word) > 1]\n",
         "                # remove tokens with numbers in them\n",
         "                desc = [word for word in desc if word.isalpha]\n",
         "                # store as string\n",
@@ -5959,7 +5963,7 @@
       "metadata": {
         "id": "4jRs1u4j5OLn"
       },
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -5984,7 +5988,7 @@
       "metadata": {
         "id": "H1rGH7LBqFNf"
       },
-      "execution_count": null,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -5999,15 +6003,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Spvz9VZYqiyG",
-        "outputId": "c2b1102b-7037-4343-ec84-798086704b8f"
+        "outputId": "08565c64-83c2-4ab9-eef5-8bdb4608e0bd"
       },
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Vocabulary Size: 1404\n"
+            "Vocabulary Size: 1352\n"
           ]
         }
       ]
@@ -7093,7 +7097,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP41pCUGRcXCvcph+KZT8mT",
+      "authorship_tag": "ABX9TyNMXkVDiZ5x2kXYpyB8j3pm",
       "include_colab_link": true
     },
     "kernelspec": {
