--- a/Shikha_version/po_otdelnosti_predict/[SM-14] Model_2_GRU_with_CheXNet_(findings) base.ipynb
+++ b/Shikha_version/po_otdelnosti_predict/[SM-14] Model_2_GRU_with_CheXNet_(findings) base.ipynb
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sun Jun 29 07:51:28 2025       \n",
+      "Tue Jul  8 17:49:59 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 560.35.03              Driver Version: 560.35.03      CUDA Version: 12.6     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -36,11 +36,11 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   73C    P0             32W /   70W |     167MiB /  15360MiB |      0%      Default |\n",
+      "| N/A   36C    P8              9W /   70W |       1MiB /  15360MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "|   1  Tesla T4                       Off |   00000000:00:05.0 Off |                    0 |\n",
-      "| N/A   76C    P0             34W /   70W |     103MiB /  15360MiB |      0%      Default |\n",
+      "| N/A   34C    P8              9W /   70W |       1MiB /  15360MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -49,6 +49,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
+      "|  No running processes found                                                             |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T17:12:51.612671Z",
@@ -91,29 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T17:17:54.573845Z",
      "start_time": "2025-06-24T17:12:57.649034Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "FileExistsError",
-     "evalue": "[Errno 17] File exists: '/kaggle/working/chest-xrays-indiana-university/images/images_normalized'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_136/818252135.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdestination_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/kaggle/working/chest-xrays-indiana-university/images/images_normalized\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mshutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopytree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdestination_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/lib/python3.11/shutil.py\u001b[0m in \u001b[0;36mcopytree\u001b[0;34m(src, dst, symlinks, ignore, copy_function, ignore_dangling_symlinks, dirs_exist_ok)\u001b[0m\n\u001b[1;32m    571\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscandir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mitr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    572\u001b[0m         \u001b[0mentries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 573\u001b[0;31m     return _copytree(entries=entries, src=src, dst=dst, symlinks=symlinks,\n\u001b[0m\u001b[1;32m    574\u001b[0m                      \u001b[0mignore\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mignore\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy_function\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m                      \u001b[0mignore_dangling_symlinks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mignore_dangling_symlinks\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.11/shutil.py\u001b[0m in \u001b[0;36m_copytree\u001b[0;34m(entries, src, dst, symlinks, ignore, copy_function, ignore_dangling_symlinks, dirs_exist_ok)\u001b[0m\n\u001b[1;32m    469\u001b[0m         \u001b[0mignored_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    470\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 471\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdirs_exist_ok\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    472\u001b[0m     \u001b[0merrors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    473\u001b[0m     \u001b[0muse_srcentry\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcopy_function\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mcopy2\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mcopy_function\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.11/os.py\u001b[0m in \u001b[0;36mmakedirs\u001b[0;34m(name, mode, exist_ok)\u001b[0m\n",
-      "\u001b[0;31mFileExistsError\u001b[0m: [Errno 17] File exists: '/kaggle/working/chest-xrays-indiana-university/images/images_normalized'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Source directory\n",
     "source_dir = \"/kaggle/input/chest-xrays-indiana-university/images/images_normalized\"\n",
@@ -126,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:39:42.943798Z",
@@ -276,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:39:43.296681Z",
@@ -294,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:39:53.096511Z",
@@ -396,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:39:57.056050Z",
@@ -435,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:40:04.558618Z",
@@ -468,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T16:40:08.076970Z",
@@ -492,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T17:09:02.619496Z",
@@ -516,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T17:09:03.029456Z",
@@ -530,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T17:09:07.123845Z",
@@ -641,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -761,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -798,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "id": "NWIZ9JqBv1fd"
    },
@@ -839,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "mfYN_uZIaXOR"
    },
@@ -861,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3495,7 +3481,7 @@
     "new_input = image_model.input\n",
     "hidden_layer = image_model.layers[-3].output\n",
     "image_features_extract_model = tf.keras.Model(new_input, hidden_layer)\n",
-    "image_features_extract_model.summary()"
+    "# image_features_extract_model.summary()"
    ]
   },
   {
@@ -3518,7 +3504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3539,12 +3525,22 @@
    "source": [
     "base_model = tf.keras.applications.inception_v3.InceptionV3(include_top=False,\n",
     "                                                            weights=\"imagenet\",\n",
-    "                                                            input_shape=(299, 299, 3))"
+    "                                                            input_shape=(299, 299, 3))\n",
+    "\n",
+    "base_model = tf.keras.applications.densenet.DenseNet121(include_top=True,\n",
+    "                                                        weights=\"imagenet\",\n",
+    "                                                        classes=14,\n",
+    "                                                        input_shape=(299, 299, 3))\n",
+    "\n",
+    "# base_model = tf.keras.applications.densenet.DenseNet121(include_top=True,\n",
+    "#                                                         weights=CHEXNET_WEIGHTS,\n",
+    "#                                                         classes=14,\n",
+    "#                                                         input_shape=(299, 299, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "id": "bEXkGwKhaoFN"
    },
@@ -3564,7 +3560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "id": "AwvqRVrGbzp_"
    },
@@ -3575,7 +3571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "id": "lqGOtnz_b_t5"
    },
@@ -3600,7 +3596,7 @@
     "    img = tf.cast(img, tf.float32)\n",
     "\n",
     "    # 4) Нормализуем под InceptionV3: (0–255) → (–1 … +1)\n",
-    "    img = tf.keras.applications.inception_v3.preprocess_input(img)\n",
+    "    img = tf.keras.applications.densenet.preprocess_input(img)\n",
     "\n",
     "    return img, image_path"
    ]
@@ -3616,14 +3612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "id": "bYFbKYgGcCXJ"
    },
    "outputs": [],
    "source": [
     "new_input = image_model.input\n",
-    "hidden_layer = image_model.layers[-1].output\n",
+    "hidden_layer = image_model.layers[-3].output\n",
     "\n",
     "image_features_extract_model = tf.keras.Model(new_input, hidden_layer)"
    ]
@@ -6446,6 +6442,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
