[SM-21] Добавил список зависимостей окружения GPT-2

--- a/GPT-2/[SM-21] GPT-2_SwinTransformer.ipynb
+++ b/GPT-2/[SM-21] GPT-2_SwinTransformer.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +42,9 @@
      "output_type": "stream",
      "text": [
       "total 12\n",
-      "drwxr-xr-x 3 root root 4096 Jul 14 14:50 .\n",
-      "drwxr-xr-x 5 root root 4096 Jul 14 14:50 ..\n",
-      "drwxr-xr-x 2 root root 4096 Jul 14 14:50 .virtual_documents\n"
+      "drwxr-xr-x 3 root root 4096 Jul 14 16:48 .\n",
+      "drwxr-xr-x 5 root root 4096 Jul 14 16:47 ..\n",
+      "drwxr-xr-x 2 root root 4096 Jul 14 16:48 .virtual_documents\n"
      ]
     }
    ],
@@ -54,33 +54,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip freeze > requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Jul 14 14:51:09 2025       \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 560.35.03              Driver Version: 560.35.03      CUDA Version: 12.6     |\n",
-      "|-----------------------------------------+------------------------+----------------------+\n",
-      "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                                         |                        |               MIG M. |\n",
-      "|=========================================+========================+======================|\n",
-      "|   0  Tesla P100-PCIE-16GB           Off |   00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   40C    P0             29W /  250W |       0MiB /  16384MiB |      0%      Default |\n",
-      "|                                         |                        |                  N/A |\n",
-      "+-----------------------------------------+------------------------+----------------------+\n",
-      "                                                                                         \n",
-      "+-----------------------------------------------------------------------------------------+\n",
-      "| Processes:                                                                              |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-      "|        ID   ID                                                               Usage      |\n",
-      "|=========================================================================================|\n",
-      "|  No running processes found                                                             |\n",
-      "+-----------------------------------------------------------------------------------------+\n"
+      "/bin/bash: nvidia-smi: command not found\n"
      ]
     }
    ],
